--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>org.iit.patientmodule.tests.ScheduleAppoinmentTests</td>
+<td>org.iit.patientmodule.tests.SendingMessageDocTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -15,7 +15,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateScheduleAppointment</td>
+<td>sendMessageCall</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
