--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7889f4">  <td>20/09/06 16:47:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ScheduleAppoinmentTests.beforeTest()[pri:0, instance:org.iit.patientmodule.tests.ScheduleAppoinmentTests@5d0bf09b]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@811597470</td>   <td></td> </tr>
-<tr bgcolor="7889f4">  <td>20/09/06 16:47:48</td>   <td>10538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ScheduleAppoinmentTests.loginMMP()[pri:1, instance:org.iit.patientmodule.tests.ScheduleAppoinmentTests@5d0bf09b]">loginMMP</td> 
-  <td>main@811597470</td>   <td></td> </tr>
-<tr bgcolor="7889f4">  <td>20/09/06 16:47:58</td>   <td>20481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ScheduleAppoinmentTests.validateScheduleAppointment()[pri:2, instance:org.iit.patientmodule.tests.ScheduleAppoinmentTests@5d0bf09b]">validateScheduleAppointment</td> 
-  <td>main@811597470</td>   <td></td> </tr>
-<tr bgcolor="7889f4">  <td>20/09/06 16:48:06</td>   <td>28709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ScheduleAppoinmentTests.logout()[pri:3, instance:org.iit.patientmodule.tests.ScheduleAppoinmentTests@5d0bf09b]">logout</td> 
-  <td>main@811597470</td>   <td></td> </tr>
+<tr bgcolor="7889f4">  <td>20/09/18 21:06:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SendingMessageDocTests.beforeTest()[pri:0, instance:org.iit.patientmodule.tests.SendingMessageDocTests@3e8c3cb]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="7889f4">  <td>20/09/18 21:06:43</td>   <td>10402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendingMessageDocTests.loginMMP()[pri:1, instance:org.iit.patientmodule.tests.SendingMessageDocTests@3e8c3cb]">loginMMP</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="7889f4">  <td>20/09/18 21:06:53</td>   <td>20332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendingMessageDocTests.sendMessageCall()[pri:2, instance:org.iit.patientmodule.tests.SendingMessageDocTests@3e8c3cb]">sendMessageCall</td> 
+  <td>main@426960147</td>   <td></td> </tr>
+<tr bgcolor="7889f4">  <td>20/09/18 21:07:00</td>   <td>27507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendingMessageDocTests.logout()[pri:3, instance:org.iit.patientmodule.tests.SendingMessageDocTests@3e8c3cb]">logout</td> 
+  <td>main@426960147</td>   <td></td> </tr>
 </table>
